Fix cell color for dark mode

--- a/components/TicTacToe.module.css
+++ b/components/TicTacToe.module.css
@@ -38,6 +38,7 @@
   }
   .cell {
     background-color: black;
+    color: white;
   }
   .cell:hover {
     background-color: #222;
